[package]
name = "sikionline-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = "4.4.10"
env_logger = "0.10.1"
futures-util = "0.3.29"
log = "0.4.20"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.20.1", features = ["connect"] }
